--- a/css/main.scss
+++ b/css/main.scss
@@ -6,7 +6,7 @@
 
 
 // Our variables
-$base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+$base-font-family: "Noto Sans KR", Helvetica, Arial, sans-serif;
 $base-font-size:   16px;
 $base-font-weight: 400;
 $small-font-size:  $base-font-size * 0.875;
@@ -51,3 +51,5 @@ $on-laptop:        800px;
         "layout",
         "syntax-highlighting"
 ;
+
+@import url(http://fonts.googleapis.com/earlyaccess/notosanskr.css);
