--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -82,8 +82,7 @@ li {
  * Headings
  */
 h1, h2, h3, h4, h5, h6 {
-    /*font-weight: $base-font-weight;*/
-  font-weight: 200;
+    font-weight: $base-font-weight;
 }
 
 
