--- a/css/main.scss
+++ b/css/main.scss
@@ -7,8 +7,9 @@
 
 // Our variables
 $base-font-family: "Noto Sans KR", Helvetica, Arial, sans-serif;
-$base-font-size:   16px;
-$base-font-weight: 400;
+//$base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+$base-font-size:   20px;
+$base-font-weight: 200;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
 
