--- a/css/main.scss
+++ b/css/main.scss
@@ -29,6 +29,10 @@ $content-width:    800px;
 $on-palm:          600px;
 $on-laptop:        800px;
 
+$main_font_color:  #1756a9;
+$head-foot-background-color: #EEEEEE;
+$title-main-color: #00AAA0; 
+
 
 
 // Use media queries like this:
