--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -26,7 +26,8 @@
       </div>
 
       <div class="footer-col footer-col-3">
-        <p>{{ site.description }}</p>
+        <!-- <p>{{ site.description }}</p> -->
+        <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
       </div>
     </div>
 
