--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -34,7 +34,8 @@ h1, h2, h3, h4, h5, h6,
 p, blockquote, pre,
 ul, ol, dl, figure,
 %vertical-rhythm {
-    margin-bottom: $spacing-unit / 2;
+    // margin-bottom: $spacing-unit / 2;
+    margin-top: $spacing-unit / 2;
 }
 
 
@@ -91,7 +92,8 @@ h1, h2, h3, h4, h5, h6 {
  * Links
  */
 a {
-    color: $brand-color;
+    // color: $brand-color;
+    color: $title-main-color; 
     text-decoration: none;
 
     &:visited {
@@ -204,3 +206,5 @@ pre {
         }
     }
 }
+
+
