--- a/css/main.scss
+++ b/css/main.scss
@@ -25,9 +25,12 @@ $grey-color-dark:  darken($grey-color, 25%);
 
 // Width of the content area
 $content-width:    800px;
+$content-height:   100px;
 
 $on-palm:          600px;
+$on-palm-height:   60px;
 $on-laptop:        800px;
+$on-laptop-height: 80px;
 
 $main_font_color:  #1756a9;
 $head-foot-background-color: #EEEEEE;
