yms9543 author 정보 추가 및 css 살짝 수정 mac에 rbenv 사용해서 ruby 개발환경 세팅하는 포스트 작성

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -264,9 +264,9 @@ iframe.banner-frame {
     width: 100%; 
     margin-right: auto;
     margin-left: auto;
-    height: $content-height * 3;
+    height: $content-height * 1.5;
     border: 0px;
-    margin-top: 40px;
+    // margin-top: 40px;
  }
 
 div.author {
@@ -321,11 +321,6 @@ div.author {
       }
 
     }
-
-    .author-desc {
-    
-    }
-
 }
 
 
