banner 적용 코드 변경 iframe-> include

--- a/_includes/template.html
+++ b/_includes/template.html
@@ -1,16 +1,6 @@
-<head>
-  <link rel="stylesheet" href="../css/bootstrap.css">
-  <link rel="stylesheet" href="../css/main.css">
-</head>
-<!-- author_info html의 file name은  -->
-<!-- author name과 같아야 합니다. (대소문자 구분) -->
-
-<body>
-  <div class='container'>
-    <div class='author row'>
+    <div class='author'>
       <div class='col-xs-2 col-md-2'>
         <div class='div-img'>  
-          <span class='vertical-helper'></span>
           <!-- 수정부 -->
           <img src='github profile picture address here' alt='pilsner'>
           <!-- 수정부 1 끝 -->
@@ -25,5 +15,3 @@
         </div>
       </div>
     </div>
-  </div>
-</body>
