object margin 수정및 이텔릭체 제거

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -296,6 +296,7 @@ div.author {
       margin-left: auto;
       border-radius: 90%;
       margin: 20px;
+      max-width: none;
       @include media-query($on-laptop) {
         height: $on-laptop-height;
       }
